k8s-stuff/tekton/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
spec:
  tls:
    - hosts:
        - tekton.achaemenid.nl
      secretName: tekton-tls
  rules:
  - host: tekton.achaemenid.nl
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
